# citbin

./: .gitignore  .trufflehog.yaml  README.md  citbin-dev.sh  package.json
.github/: dependabot.yml
00-Organisation/: 2026-03-13-Sitzung.md  README.md
apps/api/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  app.py  clean_migrations.py  dependencies.py  pyproject.toml  requirements.txt  reset_alembic.py
apps/api/api/: device_repository.py  device_service.py  mioty_service.py  trashbin_data.py  trashbin_repository.py  trashbin_service.py
apps/api/docs/: example-message.json
apps/api/migrations/: env.py
apps/api/migrations/versions/: 16e0eb5c67a3_add_latest_fill_level_to_trashbin_table.py  67583f41494c_trashbin_datalog_adjustments.py  946dd07f59a5_trashbin_update.py  9d83aac8e7c6_trashbin_optional_payload.py  b49766ff6503_remove_chirpstack_stuff_for_now.py  custom_migration.py  eb73354b5a35_add_single_row_table_for_chirpstack_.py  ee83206bb79f_geo_coordinates.py
apps/api/models/: api_models.py  device.py  trashbin.py  trashbin_data.py
apps/api/modules/: admin_auth.py  auto_migrate.py  payload_decoder.py  postgresql.py  process_data.py  sensor_factory.py  trashbin_factory.py
apps/api/modules/sensors/: __init__.py  base.py  generic.py  milesight.py  sentinum.py  simulator.py
apps/api/modules/trashbins/: base.py  presentation.py  unterflur.py
apps/api/routers/: admin.py  devices.py  helium_uplink.py  mioty.py  trashbin.py  trashbin_data.py
apps/api/tests/: conftest.py  decoder-test.py  mqtt-test.py  test_app.py  test_devices_router.py
(+107 files in other folders)
